--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "monkmail",
+  "version": "1.0.5",
+  "description": "SMTP + GitHub webhook handler",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsc",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "smtp",
+    "github",
+    "webhook"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^24.10.1"
+    "@types/node": "^24.10.1",
+    "typescript": "^5.6.0"
   },
-  "dependencies": {
-    "express": "^5.2.1"
-  }
+  "dependencies": {}
 }
