--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monkmail",
   "version": "1.0.5",
-  "description": "SMTP + GitHub webhook handler",
+  "description": "monkmail",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -10,18 +10,21 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx ts-node --transpile-only test/index.ts",
+    "test:queue": "npx ts-node --transpile-only test/demo-queue.ts",
+    "test:attachments": "npx ts-node --transpile-only test/demo-attachments.ts"
   },
   "keywords": [
     "smtp",
     "github",
     "webhook"
   ],
-  "author": "",
+  "author": "Jay",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.0"
   },
   "dependencies": {}
